# sdl_game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdl_game.sln  sdl_game.vcxproj  sdl_game.vcxproj.filters
src/: editor.h  gamebase.h  global.h  intro.h  main.cpp  play.h
